# job-os-backend

./: .env.example  Backend_Audit.md  Caddyfile  Comprehensive_Audit.md  Dockerfile  Dockerfile.playwright  README.md  docker-compose.yml  render-build.sh  requirements.txt
alembic/: env.py
app/: config.py  main.py
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  health.py  router.py
backend/app/core/: circuit_breaker.py  exceptions.py  logging.py  middleware.py  rate_limiter.py  security.py
backend/app/db/: base.py  redis.py  session.py
backend/app/models/: __init__.py  activity_log.py  api_key.py  application.py  copilot_conversation.py  document.py  education.py  failed_task.py  interview.py  job.py  job_source.py  notification.py  outreach_contact.py  outreach_message.py  profile.py  raw_job.py  review_queue.py  skill.py  task.py  user.py  work_experience.py
backend/app/schemas/: auth.py  common.py
backend/app/services/: auth_service.py
backend/app/tasks/: celery_app.py  scheduled_tasks.py
backend/scripts/: backup.py  seed.py  teardown.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_api.py  test_health_api.py
backend/tests/unit/: test_circuit_breaker.py  test_encryption.py  test_error_handling.py
docs/: Dual_Track_Execution_Plan.md  JobApplicationOS_Technical_Documentation_v1.0.md  Runbook.md  (+4 more)
(+100 files in other folders)
